# ELEC49X_UAV_Tunnel_Nav

./: .gitignore  .gitmodules  DEVELOPMENT_GUIDE.md  README.md  TUNING_MOTOR_SPEED.md  debug_output.txt  etc  parameters.bson  project_overview.md  run_mavlink_shell.sh  setup_px4.sh  setup_workspace.sh  test_data  topics.txt
src/tunnel_navigation/: CMakeLists.txt  package.xml
src/tunnel_perception/: package.xml  setup.cfg  setup.py
src/tunnel_perception/tunnel_perception/: wall_follower.py
src/tunnel_worlds/: CMakeLists.txt  package.xml
src/uav_bringup/: CMakeLists.txt  package.xml
src/uav_bringup/launch/: test_workspace.launch.py
src/uav_bringup/src/: basic_node.cpp  manual_control.cpp  motor_speed_controller.cpp  offboard_control.cpp  test_node.cpp  tunnel_nav.cpp
src/uav_simulation/: CMakeLists.txt  package.xml  simpletunnel.sdf  smoothtunnel.sdf
src/uav_simulation/config/: custom_start.sh  px4_tunnel_params.txt  view_uav.rviz
src/uav_simulation/launch/: debug_run.launch.py  simulate.launch.py  simulate_simpletunnel.launch.py  simulate_with_bridge.launch.py
src/uav_simulation/models/basic_drone/: model.config  model.sdf
src/uav_simulation/models/x3_quadcopter/: model.config  model.sdf
src/uav_simulation/models/x500_lidar_custom/: model.config  model.sdf
src/uav_simulation/worlds/: simpletunnel.sdf  tunnel_world.sdf  tunnel_world.world
